# VPiP

./: CMakeLists copy.txt  CMakeLists.txt  README.md  main.cpp
benchmarks/: benchmark.cpp  benchmark.h
convolution/: convolution.cpp  convolution.h
dotProduct/: dotProduct.cpp  dotProduct.h
matrixMul/: matMul.cpp  matMul.h
paillier/: newPaillier.cpp  newPaillier.h
utils/: myRandom.cpp  myRandom.h
